--- a/Vidly/Vidly/Views/Shared/_NavBar.cshtml
+++ b/Vidly/Vidly/Views/Shared/_NavBar.cshtml
@@ -6,7 +6,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      @Html.ActionLink( "Application name", "Index", "Home", new
+      @Html.ActionLink( "Vidly", "Index", "Home", new
    {
      area = ""
    }, new
@@ -16,9 +16,8 @@
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li>@Html.ActionLink( "Home", "Index", "Home" )</li>
-        <li>@Html.ActionLink( "About", "About", "Home" )</li>
-        <li>@Html.ActionLink( "Contact", "Contact", "Home" )</li>
+        <li>@Html.ActionLink( "Customers", "Index", "Customers" )</li>
+        <li>@Html.ActionLink( "Movies", "Index", "Movies" )</li>
       </ul>
       @Html.Partial( "_LoginPartial" )
     </div>
