--- a/Vidly/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Vidly/Views/Customers/Index.cshtml
@@ -13,10 +13,16 @@
 else
 {
   <table class="table table-bordered table-hover">
-    <tr><th>Customer</th></tr>
+    <tr>
+      <th>Customer</th>
+      <th>Discount Rate</th>
+    </tr>
     @foreach( var customer in Model )
     {
-      <tr><td><a href="Customers/Details/@customer.Id">@customer.Name</a></td></tr>
+      <tr>
+        <td><a href="Customers/Details/@customer.Id">@customer.Name</a></td>
+        <td>@customer.MembershipType.DiscountRate%</td>
+      </tr>
     }
   </table>
 }
