Customer details include membership type & birthdate.

--- a/Vidly/Vidly/Views/Customers/Details.cshtml
+++ b/Vidly/Vidly/Views/Customers/Details.cshtml
@@ -6,3 +6,11 @@
 
 <h2>@Model.Name</h2>
 
+<ul>
+  <li>Membership Type: @Model.MembershipType.Name</li>
+
+  @if( Model.BirthDate != null )
+  {
+  <li>Birthdate: @Model.BirthDate.ToString( "yyyy/MM/dd" )</li>
+  }
+</ul>
