--- a/Vidly/Vidly/Views/Movies/Index.cshtml
+++ b/Vidly/Vidly/Views/Movies/Index.cshtml
@@ -12,10 +12,16 @@
 }
 
 <table class="table table-bordered table-hover">
-  <tr><th>Movie</th></tr>
+  <tr>
+    <th>Movie</th>
+    <th>Genre</th>
+  </tr>
   @foreach( var movie in Model )
   {
-    <tr><td>@movie.Name</td></tr>
+    <tr>
+      <td>@movie.Name</td>
+      <td>@movie.Genre.Name</td>
+    </tr>
   }
 </table>
 
