--- a/Vidly/Vidly/Views/Movies/Index.cshtml
+++ b/Vidly/Vidly/Views/Movies/Index.cshtml
@@ -19,7 +19,7 @@
   @foreach( var movie in Model )
   {
     <tr>
-      <td>@movie.Name</td>
+      <td><a href="Movies/Details/@movie.Id">@movie.Name</a></td>
       <td>@movie.Genre.Name</td>
     </tr>
   }
