--- a/Vidly/Vidly/Views/Customers/New.cshtml
+++ b/Vidly/Vidly/Views/Customers/New.cshtml
@@ -1,4 +1,4 @@
-﻿@model Vidly.Models.Customer
+﻿@model Vidly.ViewModels.NewCustomerViewModel
 @{
   ViewBag.Title = "NewCustomer";
   Layout = "~/Views/Shared/_Layout.cshtml";
@@ -9,16 +9,27 @@
 @using( Html.BeginForm( "Create", "Customers" ) )
 {
   <div class="form-group">
-    @Html.LabelFor( m => m.Name )
-    @Html.TextBoxFor( m => m.Name, new { @class = "form-control" } )
+    @Html.LabelFor( m => m.Customer.Name )
+    @Html.TextBoxFor( m => m.Customer.Name, new { @class = "form-control" } )
   </div>
   <div class="form-group">
     <label for="BirthDate">Date of Birth</label>
-    @Html.TextBoxFor( m => m.BirthDate, new { @class = "form-control" } )
+    @Html.TextBoxFor( m => m.Customer.BirthDate, new { @class = "form-control" } )
   </div>
   <div class="checkbox">
     <label>
-      @Html.CheckBoxFor( m => m.IsSubscribedToNewsletter ) Subscribed to Newsletter?
+      @Html.CheckBoxFor( m => m.Customer.IsSubscribedToNewsletter ) Subscribed to Newsletter?
     </label>
+  </div>
+  <div class="form-group">
+    <label for="MembershipTypes">Membership Type</label>
+    @Html.DropDownListFor(
+      m => m.MembershipTypes,
+      new SelectList(
+        Model.MembershipTypes,
+        "Id",
+        "Name" ),
+      "Select one...",
+      new { @class = "form-control" } )
   </div>
 }
