--- a/Vidly/Vidly/Views/Customers/New.cshtml
+++ b/Vidly/Vidly/Views/Customers/New.cshtml
@@ -22,9 +22,9 @@
     </label>
   </div>
   <div class="form-group">
-    <label for="MembershipTypes">Membership Type</label>
+    <label for="MembershipType">Membership Type</label>
     @Html.DropDownListFor(
-      m => m.MembershipTypes,
+      m => m.Customer.MembershipTypeId,
       new SelectList(
         Model.MembershipTypes,
         "Id",
@@ -32,4 +32,5 @@
       "Select one...",
       new { @class = "form-control" } )
   </div>
+  <button type="submit" class="btn btn-primary">Save</button>
 }
