--- a/Vidly/Vidly/Views/Customers/CustomerForm.cshtml
+++ b/Vidly/Vidly/Views/Customers/CustomerForm.cshtml
@@ -1,6 +1,6 @@
-﻿@model Vidly.ViewModels.NewCustomerViewModel
+﻿@model Vidly.ViewModels.CustomerFormViewModel
 @{
-  ViewBag.Title = "NewCustomer";
+  ViewBag.Title = "CustomerForm";
   Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -14,12 +14,10 @@
   </div>
   <div class="form-group">
     <label for="BirthDate">Date of Birth</label>
-    @Html.TextBoxFor( m => m.Customer.BirthDate, new { @class = "form-control" } )
-  </div>
-  <div class="checkbox">
-    <label>
-      @Html.CheckBoxFor( m => m.Customer.IsSubscribedToNewsletter ) Subscribed to Newsletter?
-    </label>
+    @Html.TextBoxFor(
+      m => m.Customer.BirthDate,
+      "{0:d MMM yyyy}",
+      new { @class = "form-control" } )
   </div>
   <div class="form-group">
     <label for="MembershipType">Membership Type</label>
@@ -31,6 +29,11 @@
         "Name" ),
       "Select one...",
       new { @class = "form-control" } )
+  </div>
+  <div class="checkbox">
+    <label>
+      @Html.CheckBoxFor( m => m.Customer.IsSubscribedToNewsletter ) Subscribed to Newsletter?
+    </label>
   </div>
   <button type="submit" class="btn btn-primary">Save</button>
 }
