--- a/Vidly/Vidly/Views/Movies/Index.cshtml
+++ b/Vidly/Vidly/Views/Movies/Index.cshtml
@@ -11,6 +11,8 @@
   <p>No movies found.</p>
 }
 
+@Html.ActionLink( "NEW MOVIE", "New", "Movies", null, new { @class="btn btn-primary" } )
+
 <table class="table table-bordered table-hover">
   <tr>
     <th>Movie</th>
