--- a/Vidly/Vidly/Views/Movies/Index.cshtml
+++ b/Vidly/Vidly/Views/Movies/Index.cshtml
@@ -1,17 +1,22 @@
-﻿
+﻿@model IEnumerable<Vidly.Models.Movie>
 @{
-    ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+  ViewBag.Title = "Movies";
+  Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Movies</h2>
 
-@if( Model.Count == 0 )
+@if( Model.Any() == false )
 {
   <p>No movies found.</p>
 }
 
-@Html.ActionLink( "NEW MOVIE", "New", "Movies", null, new { @class="btn btn-primary" } )
+@Html.ActionLink(
+  "NEW MOVIE",
+  "New",
+  "Movies",
+  null,
+  new { @class="btn btn-primary" } )
 
 <table class="table table-bordered table-hover">
   <tr>
@@ -21,7 +26,14 @@
   @foreach( var movie in Model )
   {
     <tr>
-      <td><a href="Movies/Details/@movie.Id">@movie.Name</a></td>
+      <td>
+        @Html.ActionLink(
+          movie.Name,
+          "Edit",
+          "Movies",
+          new { id = movie.Id },
+          null )
+      </td>
       <td>@movie.Genre.Name</td>
     </tr>
   }
