--- a/Vidly/Vidly/Views/Customers/CustomerForm.cshtml
+++ b/Vidly/Vidly/Views/Customers/CustomerForm.cshtml
@@ -11,6 +11,7 @@
   <div class="form-group">
     @Html.LabelFor( m => m.Customer.Name )
     @Html.TextBoxFor( m => m.Customer.Name, new { @class = "form-control" } )
+    @Html.ValidationMessageFor( m => m.Customer.Name )
   </div>
   <div class="form-group">
     <label for="BirthDate">Date of Birth</label>
@@ -29,6 +30,7 @@
         "Name" ),
       "Select one...",
       new { @class = "form-control" } )
+    @Html.ValidationMessageFor( m => m.Customer.MembershipTypeId )
   </div>
   <div class="checkbox">
     <label>
