--- a/Vidly/Vidly/Views/Customers/CustomerForm.cshtml
+++ b/Vidly/Vidly/Views/Customers/CustomerForm.cshtml
@@ -19,6 +19,7 @@
       m => m.Customer.BirthDate,
       "{0:d MMM yyyy}",
       new { @class = "form-control" } )
+    @Html.ValidationMessageFor( m => m.Customer.BirthDate )
   </div>
   <div class="form-group">
     <label for="MembershipType">Membership Type</label>
