--- a/Vidly/Vidly/Views/Customers/CustomerForm.cshtml
+++ b/Vidly/Vidly/Views/Customers/CustomerForm.cshtml
@@ -8,18 +8,14 @@
 
 @using( Html.BeginForm( "Save", "Customers" ) )
 {
+  @Html.ValidationSummary(
+    true,
+    "Please fix the following errors:" )
+
   <div class="form-group">
     @Html.LabelFor( m => m.Customer.Name )
     @Html.TextBoxFor( m => m.Customer.Name, new { @class = "form-control" } )
     @Html.ValidationMessageFor( m => m.Customer.Name )
-  </div>
-  <div class="form-group">
-    <label for="BirthDate">Date of Birth</label>
-    @Html.TextBoxFor(
-      m => m.Customer.BirthDate,
-      "{0:d MMM yyyy}",
-      new { @class = "form-control" } )
-    @Html.ValidationMessageFor( m => m.Customer.BirthDate )
   </div>
   <div class="form-group">
     <label for="MembershipType">Membership Type</label>
@@ -30,8 +26,19 @@
         "Id",
         "Name" ),
       "Select one...",
-      new { @class = "form-control" } )
+      new
+      {
+        @class = "form-control"
+      } )
     @Html.ValidationMessageFor( m => m.Customer.MembershipTypeId )
+  </div>
+  <div class="form-group">
+    <label for="BirthDate">Date of Birth</label>
+    @Html.TextBoxFor(
+      m => m.Customer.BirthDate,
+      "{0:d MMM yyyy}",
+      new { @class = "form-control" } )
+    @Html.ValidationMessageFor( m => m.Customer.BirthDate )
   </div>
   <div class="checkbox">
     <label>
