--- a/Vidly/Vidly/Views/Customers/CustomerForm.cshtml
+++ b/Vidly/Vidly/Views/Customers/CustomerForm.cshtml
@@ -48,3 +48,8 @@
   @Html.HiddenFor( m => m.Customer.Id );
   <button type="submit" class="btn btn-primary">Save</button>
 }
+
+@section scripts
+{
+  @Scripts.Render( "~/bundles/jqueryval" )
+}
