--- a/Vidly/Vidly/Views/Movies/MovieForm.cshtml
+++ b/Vidly/Vidly/Views/Movies/MovieForm.cshtml
@@ -15,9 +15,14 @@ else
 
 @using( Html.BeginForm( "Save", "Movies" ) )
 {
+  @Html.ValidationSummary(
+    true,
+    "Please fix the following:" )
+
   <div class="form-group">
     @Html.LabelFor( m => m.Movie.Name )
     @Html.TextBoxFor( m => m.Movie.Name, new { @class = "form-control" } )
+    @Html.ValidationMessageFor( m => m.Movie.Name )
   </div>
   <div class="form-group">
     @Html.LabelFor( m => m.Movie.ReleaseDate )
@@ -25,6 +30,7 @@ else
       m => m.Movie.ReleaseDate,
       "{0:d MMM yyyy}",
       new { @class = "form-control" } )
+    @Html.ValidationMessageFor( m => m.Movie.ReleaseDate )
   </div>
   <div class="form-group">
     @Html.LabelFor( m => m.Movie.GenreId )
@@ -36,13 +42,21 @@ else
         "Name" ),
       "Select one...",
       new { @class = "form-control" } )
+    @Html.ValidationMessageFor( m => m.Movie.GenreId )
   </div>
   <div class="form-group">
     @Html.LabelFor( m => m.Movie.NumberInStock )
     @Html.TextBoxFor(
       m => m.Movie.NumberInStock,
       new { @class = "form-control" } )
+    @Html.ValidationMessageFor( m => m.Movie.NumberInStock )
   </div>
   @Html.HiddenFor( m => m.Movie.Id );
+  @Html.AntiForgeryToken()
   <button type="submit" class="btn btn-primary">Save</button>
+}
+
+@section scripts
+{
+  @Scripts.Render( "~/bundles/jqueryval" )
 }
