--- a/Vidly/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Vidly/Views/Customers/Index.cshtml
@@ -48,17 +48,22 @@ else
       {
         var button = $(this);
 
-        if( confirm( "Are you sure you want to delete this customer?" ) )
-        {
-          $.ajax({
-            url: "/api/customers/" + button.attr( "data-customer-id" ),
-            method: "DELETE",
-            success: function ()
+        bootbox.confirm(
+          "Are you sure you want to delete this customer?",
+          function( result )
+          {
+            if( result )
             {
-              button.parents( "tr" ).remove();
+              $.ajax({
+                url: "/api/customers/" + button.attr( "data-customer-id" ),
+                method: "DELETE",
+                success: function ()
+                {
+                  button.parents( "tr" ).remove();
+                }
+              });
             }
           });
-        }
       });
     });
   </script>
