--- a/Vidly/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Vidly/Views/Customers/Index.cshtml
@@ -1,52 +1,21 @@
-﻿@model IEnumerable<Vidly.Models.Customer>
-@{
+﻿@{
     ViewBag.Title = "Customers";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Customers</h2>
 
-@if( Model.Any() == false )
-{
-  <p>No customers found.</p>
-}
-else
-{
-  <table id="customers" class="table table-bordered table-hover">
-    <thead>
-      <tr>
-        <th>Customer</th>
-        <th>Membership Type</th>
-        <th>Delete</th>
-      </tr>
-    </thead>
-    <tbody>
-      @foreach( var customer in Model )
-      {
-        <tr>
-          <td>
-            @Html.ActionLink(
-              customer.Name,
-              "Edit",
-              "Customers",
-              new
-              {
-                id = customer.Id
-              },
-              null )
-          </td>
-          <td>@customer.MembershipType.Name</td>
-          <td>
-            <button data-customer-id="@customer.Id"
-                    class="btn btn-link js-delete">
-              Delete
-            </button>
-          </td>
-        </tr>
-      }
-    </tbody>
-  </table>
-}
+<table id="customers" class="table table-bordered table-hover">
+  <thead>
+    <tr>
+      <th>Customer</th>
+      <th>Membership Type</th>
+      <th>Delete</th>
+    </tr>
+  </thead>
+  <tbody>
+  </tbody>
+</table>
 
 @section scripts
 {
@@ -55,7 +24,38 @@ else
     {
       var customersTable = $("#customers");
 
-      customersTable.DataTable();
+      customersTable.DataTable(
+      {
+        ajax:
+        {
+          url: "/api/customers",
+          dataSrc: ""
+        },
+        columns:
+        [
+          {
+            data: "name",
+            render: function( data, type, customer )
+            {
+              return
+                "<a href='/customers/edit/" + customer.id + "'>" +
+                customer.name + "</a>";
+            }
+          },
+          {
+            data: "name"
+          },
+          {
+            data: "id",
+            render: function( data )
+            {
+              return
+                "<button class='btn-link js-delete' " +
+                "data-customer-id=" + data + ">Delete</button>";
+            }
+          }
+        ]
+      });
 
       customersTable.on( "click", ".js-delete", function ()
       {
@@ -67,7 +67,8 @@ else
           {
             if( result )
             {
-              $.ajax({
+              $.ajax(
+              {
                 url: "/api/customers/" + button.attr( "data-customer-id" ),
                 method: "DELETE",
                 success: function ()
