--- a/Vidly/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Vidly/Views/Customers/Index.cshtml
@@ -24,7 +24,7 @@
     {
       var customersTable = $("#customers");
 
-      customersTable.DataTable(
+      var dataTable = customersTable.DataTable(
       {
         ajax:
         {
@@ -71,7 +71,7 @@
                 method: "DELETE",
                 success: function ()
                 {
-                  button.parents( "tr" ).remove();
+                  dataTable.row( button.parents( "tr" ) ).remove().draw();
                 }
               });
             }
