--- a/Vidly/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Vidly/Views/Customers/Index.cshtml
@@ -49,7 +49,7 @@
             render:
               function( data )
               {
-                return "<button class='btn-link js-delete' " + "data-customer-id=" + data + ">Delete</button>";
+                return "<button class='btn btn-link js-delete' data-customer-id=" + data + ">Delete</button>";
               }
           }
         ]
