--- a/Vidly/Vidly/Views/Movies/Index.cshtml
+++ b/Vidly/Vidly/Views/Movies/Index.cshtml
@@ -1,15 +1,9 @@
-﻿@model IEnumerable<Vidly.Models.Movie>
-@{
+﻿@{
   ViewBag.Title = "Movies";
   Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Movies</h2>
-
-@if( Model.Any() == false )
-{
-  <p>No movies found.</p>
-}
 
 @Html.ActionLink(
   "NEW MOVIE",
@@ -18,24 +12,86 @@
   null,
   new { @class="btn btn-primary" } )
 
-<table class="table table-bordered table-hover">
-  <tr>
-    <th>Movie</th>
-    <th>Genre</th>
-  </tr>
-  @foreach( var movie in Model )
-  {
+<p />
+
+<table id="movies" class="table table-bordered table-hover">
+  <thead>
     <tr>
-      <td>
-        @Html.ActionLink(
-          movie.Name,
-          "Edit",
-          "Movies",
-          new { id = movie.Id },
-          null )
-      </td>
-      <td>@movie.Genre.Name</td>
+      <th>Movie</th>
+      <th>Genre</th>
+      <th>Delete</th>
     </tr>
-  }
+  </thead>
+  <tbody>
+  </tbody>
 </table>
 
+@section scripts
+{
+  <script>
+    $(document).ready(
+      function()
+      {
+        var table = $("#movies");
+
+        var dataTable =
+          table.DataTable(
+          {
+            ajax:
+            {
+              url: "/api/movies",
+              dataSrc: ""
+            },
+            columns:
+            [
+              {
+                data: "name",
+                render:
+                  function( data, type, movie )
+                  {
+                    return "<a href='/movies/edit/" + movie.id + "'>" + movie.name + "</a>";
+                  }
+              },
+              {
+                data: "genre.name"
+              },
+              {
+                data: "id",
+                render:
+                  function( data )
+                  {
+                    return "<button class='btn btn-link js-delete' data-movie-id=" + data + ">Delete</button>";
+                  }
+              }
+            ]
+          });
+
+        table.on(
+          "click",
+          ".js-delete",
+          function()
+          {
+            var button = $(this);
+
+            bootbox.confirm(
+              "Are you sure you want to delete this movie?",
+              function( result )
+              {
+                if( result )
+                {
+                  $.ajax(
+                  {
+                    url: "/api/movies/" + button.attr( "data-movie-id" ),
+                    method: "DELETE",
+                    success: function ()
+                    {
+                      dataTable.row( button.parents( "tr" ) ).remove().draw();
+                    }
+                  });
+                }
+              });
+          });
+      }
+    );
+  </script>
+}
