NumberAvailable added to Movie.

--- a/Vidly/Vidly/Views/Movies/Details.cshtml
+++ b/Vidly/Vidly/Views/Movies/Details.cshtml
@@ -11,4 +11,5 @@
   <li>Release Date: @Model.ReleaseDate.ToString( "yyyy/MM/dd" )</li>
   <li>Date Added: @Model.DateAdded.ToString( "yyyy/MM/dd" )</li>
   <li>Number in stock: @Model.NumberInStock</li>
+  <li>Number available: @Model.NumberAvailable</li>
 </ul>
