Filtering of typeahead results. Rental form submission.

--- a/Vidly/Vidly/Views/Movies/List.cshtml
+++ b/Vidly/Vidly/Views/Movies/List.cshtml
@@ -39,7 +39,7 @@
           {
             ajax:
             {
-              url: "/api/movies",
+              url: "/api/movies?query='none'",
               dataSrc: ""
             },
             columns:
