--- a/Vidly/Vidly/Views/Rentals/New.cshtml
+++ b/Vidly/Vidly/Views/Rentals/New.cshtml
@@ -6,17 +6,27 @@
 
 <h2>New Rental Form</h2>
 
-<form>
+<form id="newRental">
   <div class="form-group">
     <label>Customer</label>
-    <input id="customer" type="text" value="" class="form-control" />
+    <div class="tt-container">
+      <input id="customer" type="text" value="" class="form-control" />
+    </div>
   </div>
 
   <div class="form-group">
     <label>Movie</label>
-    <input id="movie" type="text" value="" class="form-control" />
+    <div class="tt-container">
+      <input id="movie" type="text" value="" class="form-control" />
+    </div>
   </div>
-
+  
+  <div class="row">
+    <div class="col-md-4">
+      <ul id="movies" class="list-group"></ul>
+    </div>
+  </div>
+  
   <button class="btn btn-primary">Submit</button>
 </form>
 
@@ -26,7 +36,10 @@
     $(document).ready(
       function()
       {
-        var vm = {};
+        var vm =
+        {
+          movieIds: []
+        };
 
         var customers = new Bloodhound(
         {
@@ -34,7 +47,7 @@
           queryTokenizer: Bloodhound.tokenizers.whitespace,
           remote:
           {
-            url: '/api/customers?query=%QUERY.json',
+            url: '/api/customers?query=%QUERY',
             wildcard: '%QUERY'
           }
         });
@@ -62,7 +75,7 @@
           queryTokenizer: Bloodhound.tokenizers.whitespace,
           remote:
           {
-            url: '/api/movies?query=%QUERY.json',
+            url: '/api/movies?query=%QUERY',
             wildcard: '%QUERY'
           }
         });
@@ -81,8 +94,28 @@
             "typeahead:select",
             function( e, movie )
             {
-              console.log( movie.name );
+              $("#movies").append("<li class='list-group-item'>" + movie.name + "</li>");
+
+              $("#movie").typeahead("val", "");
+
+              vm.movieIds.push(movie.id);
             });
+
+        $("#newRental").submit(function(e) {
+          e.preventDefault();
+
+          $.ajax({
+              url: "/api/newRentals",
+              method: "post",
+              data: vm
+            })
+            .done(function() {
+              console.log("done");
+            })
+            .fail(function() {
+
+            });
+        });
       });
   </script>
 }
