--- a/Vidly/Vidly/Views/Rentals/New.cshtml
+++ b/Vidly/Vidly/Views/Rentals/New.cshtml
@@ -110,10 +110,10 @@
               data: vm
             })
             .done(function() {
-              console.log("done");
+              toastr.success("Rentals successfully recorded.");
             })
             .fail(function() {
-
+              toastr.success("Something unexpected happened.");
             });
         });
       });
